change peso of integer to bigdecimal, in propriedade.java and propriedade_cadastro.html

--- a/src/main/resources/templates/propriedade/propriedade_cadastro.html
+++ b/src/main/resources/templates/propriedade/propriedade_cadastro.html
@@ -102,7 +102,7 @@
 				</div>
 				<div class="form-row">
 					<div class="form-group col-md-6">
-						<label for="peso">Peso</label> <input type="text" pattern="\d*" 
+						<label for="peso">Peso</label> <input type="text" 
 							class="form-control" id="peso" placeholder="Peso"
 							autofocus="autofocus" th:field="*{peso}"
 							th:classappend="${#fields.hasErrors('peso')} ? 'is-invalid'" />
