--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -299,6 +299,26 @@
         success: function(response) {
             // Preencha os campos do formulário com os dados da cotação anterior
             document.getElementById("valor1").value = response.valor1;
+            document.getElementById("valor2").value = response.valor2;
+            document.getElementById("valor3").value = response.valor3;
+            document.getElementById("valor4").value = response.valor4;
+            
+            document.getElementById("valor5").value = response.valor5;
+            document.getElementById("valor6").value = response.valor6;
+            document.getElementById("valor7").value = response.valor7;
+            document.getElementById("valor8").value = response.valor8;
+            
+            document.getElementById("valor9").value = response.valor9;
+            document.getElementById("valor10").value = response.valor10;
+            
+            
+            document.getElementById("precoMinimo").value = response.precoMinimo;
+            document.getElementById("precoMedio").value = response.precoMedio;
+            document.getElementById("precoMaximo").value = response.precoMaximo;
+            document.getElementById("valorComum").value = response.valorComum;
+            
+            
+            
             // Preencha outros campos, se necessário
         },
         error: function() {
