--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.tymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.tymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
 <meta charset="utf-8">
@@ -17,7 +18,7 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 
-	
+
 </head>
 
 <body>
@@ -48,226 +49,232 @@
 				<div class="form-group col-md-8">
 					<label for="propriedade">Produto/Propriedade</label> <select
 						id="propriedade" class="form-control" th:field="*{propriedade}"
-						required onchange="buscarCotacaoAnterior()">
+						onchange="limparCampos(); buscarCotacaoAnterior()">
 						<option value="">Selecione...</option>
-						<option th:each="p : ${cotados}" th:data-peso="${p.peso}" th:value="${p.id} "
+						<option th:each="p : ${cotados}" th:data-peso="${p.peso}"
+							th:value="${p.id} "
 							th:text="${p.produto.nome} + '  ' + ${p.variedade}  + '  ' + ${p.subvariedade} 
 							+ '  ' + ${p.classificacao}  + '  ' + ${p.unidade} + '  ' + ${p.peso} + '   ' + ${p.embalagem}">
 						</option>
 					</select>
-					
+					<div class="input-group-append">
+						<span class="input-group-text">ou</span>
+					</div>
+					<input type="text" class="form-control" id="idPropriedade"
+						placeholder="ID da Propriedade"
+						oninput="limparCampos(); buscarCotacaoAnteriorPorId()">
 				</div>
+
 			</div>
 
-<div class="form-row">
-    <div class="form-group col-md-2">
-        <label for="dataCotacao">Data da Cotação</label>
 
-        <input type="date" class="form-control" id="dataCotacao" autofocus="autofocus" th:field="*{dataCotacao}"
-        th:value="${dataCotacao}" required />
-        <div class="invalid-feedback">
-            <span th:errors="*{dataCotacao}"></span>
-        </div>
-    </div>
-</div>
-
+	<div class="form-row">
+		<div class="form-group col-md-2">
+			<label for="dataCotacao">Data da Cotação</label> <input type="date"
+				class="form-control" id="dataCotacao" autofocus="autofocus"
+				th:field="*{dataCotacao}" th:value="${dataCotacao}" required />
+			<div class="invalid-feedback">
+				<span th:errors="*{dataCotacao}"></span>
+			</div>
+		</div>
+	</div>
+	<!-- 
  <button type="button" class="btn btn-primary" onclick="buscarCotacaoAnterior()">Buscar Cotação Anterior</button>
+ -->
+	<div class="row">
 
-			<div class="row">
+		<div class="col ">
+			<label for="valor1">Valor cotado(1)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor1"
+				data-mask-reverse="true" th:field="*{valor1}" required
+				th:classappend="${#fields.hasErrors('valor1')} ? 'is-invalid'" />
 
-				<div class="col ">
-					<label for="valor1">Valor cotado(1)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor1"
-						data-mask-reverse="true" th:field="*{valor1}" required
-						th:classappend="${#fields.hasErrors('valor1')} ? 'is-invalid'" />
-
-					<div class="invalid-feedback">
-						<span th:errors="*{valor1}"></span>
-					</div>
-				</div>
-
-				<div class="col">
-					<label for="valor2">Valor cotado(2)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor2"
-						data-mask-reverse="true" th:field="*{valor2}" required
-						th:classappend="${#fields.hasErrors('valor2')} ? 'is-invalid'" />
-
-					<div class="invalid-feedback">
-						<span th:errors="*{valor2}"></span>
-					</div>
-				</div>
-
+			<div class="invalid-feedback">
+				<span th:errors="*{valor1}"></span>
 			</div>
+		</div>
 
+		<div class="col">
+			<label for="valor2">Valor cotado(2)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor2"
+				data-mask-reverse="true" th:field="*{valor2}" required
+				th:classappend="${#fields.hasErrors('valor2')} ? 'is-invalid'" />
 
-			<div class="row">
-
-				<div class="col">
-					<label for="valor3">Valor cotado(3)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor3"
-						data-mask-reverse="true" th:field="*{valor3}" required
-						th:classappend="${#fields.hasErrors('valor3')} ? 'is-invalid'" />
-
-					<div class="invalid-feedback">
-						<span th:errors="*{valor3}"></span>
-					</div>
-				</div>
-				<div class="col">
-					<label for="valor4">Valor cotado(4)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor4"
-						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor4}"
-						th:classappend="${#fields.hasErrors('valor4')} ? 'is-invalid'" />
-					<div class="invalid-feedback">
-						<span th:errors="*{valor4}"></span>
-					</div>
-				</div>
-
+			<div class="invalid-feedback">
+				<span th:errors="*{valor2}"></span>
 			</div>
+		</div>
 
-			<div class="row">
+	</div>
 
-				<div class="col">
-					<label for="valor5">Valor cotado(5)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor5"
-						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor5}"
-						th:classappend="${#fields.hasErrors('valor5')} ? 'is-invalid'" />
 
-					<div class="invalid-feedback">
-						<span th:errors="*{valor5}"></span>
-					</div>
-				</div>
-				<div class="col">
-					<label for="valor6">Valor cotado(6)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor6"
-						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor6}"
-						th:classappend="${#fields.hasErrors('valor6')} ? 'is-invalid'" />
-					<div class="invalid-feedback">
-						<span th:errors="*{valor6}"></span>
-					</div>
-				</div>
+	<div class="row">
 
+		<div class="col">
+			<label for="valor3">Valor cotado(3)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor3"
+				data-mask-reverse="true" th:field="*{valor3}" required
+				th:classappend="${#fields.hasErrors('valor3')} ? 'is-invalid'" />
+
+			<div class="invalid-feedback">
+				<span th:errors="*{valor3}"></span>
 			</div>
-
-			<div class="row">
-
-				<div class="col">
-					<label for="valor7">Valor cotado(7)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor7"
-						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor7}"
-						th:classappend="${#fields.hasErrors('valor7')} ? 'is-invalid'" />
-
-					<div class="invalid-feedback">
-						<span th:errors="*{valor7}"></span>
-					</div>
-				</div>
-				<div class="col">
-					<label for="valor8">Valor cotado(8)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor8"
-						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor8}"
-						th:classappend="${#fields.hasErrors('valor8')} ? 'is-invalid'" />
-					<div class="invalid-feedback">
-						<span th:errors="*{valor8}"></span>
-					</div>
-				</div>
+		</div>
+		<div class="col">
+			<label for="valor4">Valor cotado(4)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor4"
+				data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor4}"
+				th:classappend="${#fields.hasErrors('valor4')} ? 'is-invalid'" />
+			<div class="invalid-feedback">
+				<span th:errors="*{valor4}"></span>
 			</div>
-			<div class="row">
-				<div class="col">
-					<label for="valor9">Valor cotado(9)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor9"
-						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor9}"
-						th:classappend="${#fields.hasErrors('valor9')} ? 'is-invalid'" />
+		</div>
 
-					<div class="invalid-feedback">
-						<span th:errors="*{valor9}"></span>
-					</div>
-				</div>
-				<div class="col">
-					<label for="valor10">Valor cotado(10)</label> <input type="text"
-						class="form-control valor-com-virgula" id="valor10"
-						data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor10}"
-						th:classappend="${#fields.hasErrors('valor10')} ? 'is-invalid'" />
-					<div class="invalid-feedback">
-						<span th:errors="*{valor10}"></span>
-					</div>
-				</div>
+	</div>
+
+	<div class="row">
+
+		<div class="col">
+			<label for="valor5">Valor cotado(5)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor5"
+				data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor5}"
+				th:classappend="${#fields.hasErrors('valor5')} ? 'is-invalid'" />
+
+			<div class="invalid-feedback">
+				<span th:errors="*{valor5}"></span>
 			</div>
-
-			<div class="form-row">
-				<div class="form-group col-md-2">
-					<label for="fatorSazonal">Fator Sazonal</label> <select
-						id="fatorSazonal" class="form-control" th:field="*{fatorSazonal}"
-						th:classappend="${#fields.hasErrors('fatorSazonal')} ? 'is-invalid'">
-						<option value="">Selecione...</option>
-						<option th:each="fator : ${fatores}" th:value="${fator}"
-							th:text="${fator.descricao}">Normal</option>
-					</select>
-					<div class="invalid-feedback">
-						<span th:errors="*{fatorSazonal}"></span>
-					</div>
-				</div>
+		</div>
+		<div class="col">
+			<label for="valor6">Valor cotado(6)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor6"
+				data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor6}"
+				th:classappend="${#fields.hasErrors('valor6')} ? 'is-invalid'" />
+			<div class="invalid-feedback">
+				<span th:errors="*{valor6}"></span>
 			</div>
+		</div>
 
-			<div class="row">
-				<div class="col">
-					<label for="precoMinimo">Preco Minimo</label> <input type="text"
-						class="form-control" id="precoMinimo" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{precoMinimo}" required
-						th:classappend="${#fields.hasErrors('precoMinimo')} ? 'is-invalid'" />
+	</div>
 
-					<div class="invalid-feedback">
-						<span th:errors="*{precoMinimo}"></span>
-					</div>
-				</div>
-				<div class="col">
-					<label for="precoMedio">Preco Médio</label> <input type="text"
-						class="form-control" id="precoMedio" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{precoMedio}" required
-						th:classappend="${#fields.hasErrors('precoMedio')} ? 'is-invalid'" />
-					<div class="invalid-feedback">
-						<span th:errors="*{precoMedio}"></span>
-					</div>
-				</div>
+	<div class="row">
 
-				<div class="col">
-					<label for="precoMaximo">Preco Máximo</label> <input type="text"
-						class="form-control" id="precoMaximo" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{precoMaximo}" required
-						th:classappend="${#fields.hasErrors('precoMaximo')} ? 'is-invalid'" />
-					<div class="invalid-feedback">
-						<span th:errors="*{precoMaximo}"></span>
-					</div>
-				</div>
+		<div class="col">
+			<label for="valor7">Valor cotado(7)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor7"
+				data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor7}"
+				th:classappend="${#fields.hasErrors('valor7')} ? 'is-invalid'" />
 
-				<div class="col">
-					<label for="valorComum">Preco Comum</label> <input type="text"
-						class="form-control" id="valorComum" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valorComum}" required
-						th:classappend="${#fields.hasErrors('valorComum')} ? 'is-invalid'" />
-					<div class="invalid-feedback">
-						<span th:errors="*{valorComum}"></span>
-					</div>
-				</div>
-
-
-				<div class="col">
-					<br>
-					<button type="button" class="btn btn-primary"
-						onclick="calcularValores()">Calcular Valores</button>
-				</div>
+			<div class="invalid-feedback">
+				<span th:errors="*{valor7}"></span>
 			</div>
-			
-			
-			
-			
-			<div class="row">
-
-				<div class="col">
-					<br> <input type="hidden" id="id" th:field="*{id}" />
-					<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
-				</div>
+		</div>
+		<div class="col">
+			<label for="valor8">Valor cotado(8)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor8"
+				data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor8}"
+				th:classappend="${#fields.hasErrors('valor8')} ? 'is-invalid'" />
+			<div class="invalid-feedback">
+				<span th:errors="*{valor8}"></span>
 			</div>
-		</form>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col">
+			<label for="valor9">Valor cotado(9)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor9"
+				data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor9}"
+				th:classappend="${#fields.hasErrors('valor9')} ? 'is-invalid'" />
+
+			<div class="invalid-feedback">
+				<span th:errors="*{valor9}"></span>
+			</div>
+		</div>
+		<div class="col">
+			<label for="valor10">Valor cotado(10)</label> <input type="text"
+				class="form-control valor-com-virgula" id="valor10"
+				data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor10}"
+				th:classappend="${#fields.hasErrors('valor10')} ? 'is-invalid'" />
+			<div class="invalid-feedback">
+				<span th:errors="*{valor10}"></span>
+			</div>
+		</div>
+	</div>
+
+	<div class="form-row">
+		<div class="form-group col-md-2">
+			<label for="fatorSazonal">Fator Sazonal</label> <select
+				id="fatorSazonal" class="form-control" th:field="*{fatorSazonal}"
+				th:classappend="${#fields.hasErrors('fatorSazonal')} ? 'is-invalid'">
+				<option value="">Selecione...</option>
+				<option th:each="fator : ${fatores}" th:value="${fator}"
+					th:text="${fator.descricao}">Normal</option>
+			</select>
+			<div class="invalid-feedback">
+				<span th:errors="*{fatorSazonal}"></span>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col">
+			<label for="precoMinimo">Preco Minimo</label> <input type="text"
+				class="form-control" id="precoMinimo" data-mask="#.##0,00"
+				data-mask-reverse="true" th:field="*{precoMinimo}" required
+				th:classappend="${#fields.hasErrors('precoMinimo')} ? 'is-invalid'" />
+
+			<div class="invalid-feedback">
+				<span th:errors="*{precoMinimo}"></span>
+			</div>
+		</div>
+		<div class="col">
+			<label for="precoMedio">Preco Médio</label> <input type="text"
+				class="form-control" id="precoMedio" data-mask="#.##0,00"
+				data-mask-reverse="true" th:field="*{precoMedio}" required
+				th:classappend="${#fields.hasErrors('precoMedio')} ? 'is-invalid'" />
+			<div class="invalid-feedback">
+				<span th:errors="*{precoMedio}"></span>
+			</div>
+		</div>
+
+		<div class="col">
+			<label for="precoMaximo">Preco Máximo</label> <input type="text"
+				class="form-control" id="precoMaximo" data-mask="#.##0,00"
+				data-mask-reverse="true" th:field="*{precoMaximo}" required
+				th:classappend="${#fields.hasErrors('precoMaximo')} ? 'is-invalid'" />
+			<div class="invalid-feedback">
+				<span th:errors="*{precoMaximo}"></span>
+			</div>
+		</div>
+
+		<div class="col">
+			<label for="valorComum">Preco Comum</label> <input type="text"
+				class="form-control" id="valorComum" data-mask="#.##0,00"
+				data-mask-reverse="true" th:field="*{valorComum}" required
+				th:classappend="${#fields.hasErrors('valorComum')} ? 'is-invalid'" />
+			<div class="invalid-feedback">
+				<span th:errors="*{valorComum}"></span>
+			</div>
+		</div>
+
+
+		<div class="col">
+			<br>
+			<button type="button" class="btn btn-primary"
+				onclick="calcularValores()">Calcular Valores</button>
+		</div>
+	</div>
+
+
+
+
+	<div class="row">
+
+		<div class="col">
+			<br> <input type="hidden" id="id" th:field="*{id}" />
+			<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+		</div>
+	</div>
+	</form>
 	</div>
 
 
@@ -278,7 +285,34 @@
 	<script th:inline="javascript">
     /*<![CDATA[*/
 
+    	
+    	  function limparCampos() {
+            
+           
+         	 document.getElementById("valor1").value = "";
+            document.getElementById("valor2").value = "";
+            document.getElementById("valor3").value = "";
+            document.getElementById("valor4").value = "";
+            document.getElementById("valor5").value = "";
+            document.getElementById("valor6").value = "";
+            document.getElementById("valor7").value = "";
+            document.getElementById("valor8").value = "";
+            document.getElementById("valor9").value = "";
+            document.getElementById("valor10").value = "";
+            document.getElementById("precoMinimo").value = "";
+            document.getElementById("precoMedio").value = "";
+            document.getElementById("precoMaximo").value = "";
+            document.getElementById("valorComum").value = "";
+            
+            buscarCotacaoAnterior();
+           
+      } 	
+   
     function buscarCotacaoAnterior() {
+    	
+     	
+    
+    	
     var propriedadeId = document.getElementById("propriedade").value;
     var dataCotacao = document.getElementById("dataCotacao").value;
     
@@ -426,9 +460,9 @@
 		});
 		/*]]>*/
 	</script>
-	
 
-	
+
+
 
 
 
