--- a/src/main/resources/templates/produto/produto_listagem.html
+++ b/src/main/resources/templates/produto/produto_listagem.html
@@ -1,51 +1,66 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.tymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.tymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-	<title>Sistema DEVCEASA</title>
-	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+	rel="stylesheet">
+<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+	rel="stylesheet">
+<title>Sistema DEVCEASA</title>
+<link th:href="@{/css/myStyle.css}" rel="stylesheet">
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-	
-	<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
+
+	<div id="navmenu" th:insert="~{navbar :: menu-principal}"></div>
 
 
 
 
 	<section class="layout-content" layout:fragment="corpo">
 		<div class="container">
-			<div class="meu-hr">Lista de produtos<hr></div>
+			<div class="meu-hr">
+				Lista de produtos
+				<hr>
+			</div>
 			<div class="form-group row">
 
-					
-					<div th:replace="~{alert}"></div>
-				
-
+				<div th:replace="~{alert}"></div>
 
 			</div>
 
 
 
-			
-		
-		
-		<a class="inicio" th:href="@{/}">Início</a>
+			<a class="inicio" th:href="@{/}">Início</a>
+
+
+			<form th:action="@{/produtos/pesquisar}" method="get">
+				<label for="produto">Pesquisar por ID:</label> <input type="text"
+					id="produto" name="id" />
+				<button type="submit">Pesquisar</button>
+
+				<label for="productName">Pesquisar por Nome:</label> <input
+					type="text" id="productName" name="nome" />
+				<button type="submit">Pesquisar por Nome</button>
+			</form>
 
 
 
 			<table class="table table-bordered">
 				<thead>
 					<tr>
-						<th><a th:href="@{'/produtos/page/' +${currentPage} 
+						<th><a
+							th:href="@{'/produtos/page/' +${currentPage} 
 									+ '?sortField=id&sortDir=' 
 									+ ${reverseSortDir}}">Id</a></th>
-						<th><a th:href="@{'/ceasadev/produtos/page/' +${currentPage} 
+						<th><a
+							th:href="@{'/ceasadev/produtos/page/' +${currentPage} 
 									+ '?sortField=nome&sortDir=' 
 									+ ${reverseSortDir}}">Produtos</a>
 						</th>
@@ -58,28 +73,24 @@
 				</thead>
 				<tbody>
 					<tr th:each="produto : ${produtos}">
-						<td th:text="${produto.id}"  class="fonte-table"></td>
-						<td th:text="${produto.nome}" class="fonte-table" ></td>
-						<td th:text="${produto.subgrupo.nome}" class="fonte-table" ></td>
+						<td th:text="${produto.id}" class="fonte-table"></td>
+						<td th:text="${produto.nome}" class="fonte-table"></td>
+						<td th:text="${produto.subgrupo.nome}" class="fonte-table"></td>
 
 						<td><a type="button" class="edit" title="Editar"
-								th:href="@{/produtos/editar/{id} (id=${produto.id}) }">
-								<i class="bi bi-pencil-square"></i>
-							
-							</a> 
-							
-							<a type="button" class="delete" title="Excluir" th:href="@{/produtos/excluir/{id} (id=${produto.id}) }">
-							<i class="bi bi-trash3"></i>
-							
-							</a> 
+							th:href="@{/produtos/editar/{id} (id=${produto.id}) }"> <i
+								class="bi bi-pencil-square"></i>
 
-							<!-- eSCONDENDO O EXCLUIR <a type="button" class="delete" title="Excluir"
+						</a> <a type="button" class="delete" title="Excluir"
+							th:href="@{/produtos/excluir/{id} (id=${produto.id}) }"> <i
+								class="bi bi-trash3"></i>
+
+						</a> <!-- eSCONDENDO O EXCLUIR <a type="button" class="delete" title="Excluir"
 														th:href="@{/ceasadev/produtos/excluir/{id} (id=${produto.id}) }">
-														<i class="bi bi-trash3"></i>	-->
-
-							<a class="look" th:href="@{/propriedades/produtos/{id} (id=${produto.id})}">
+														<i class="bi bi-trash3"></i>	--> <a class="look"
+							th:href="@{/propriedades/produtos/{id} (id=${produto.id})}">
 								<i class="bi bi-eye-fill" title="Propriedades"></i>
-							</a>
+						</a>
 					<tr th:each="s : ${propriedades}">
 						<td th:text="${s.id}"></td>
 						<td th:text="${s.nome}"></td>
@@ -90,11 +101,13 @@
 			</table>
 
 
+			<a class="inicio" th:href="@{/produtos/listar}">Todos os produtos</a>
 
 
 			<div th:if="${totalPages > 1}">
 				<div class="pagination justify-content-center">
-					<div class="page-item disabled">Total Itens: [[${totalItems}]]</div>
+					<div class="page-item disabled">Total Itens:
+						[[${totalItems}]]</div>
 
 					<div class="col-sm-1">
 						<a th:if="${currentPage > 1} " class="page-item"
@@ -103,8 +116,9 @@
 					</div>
 
 					<div class="col-sm-2">
-						<span th:each="i: ${#numbers.sequence(1, totalPages)}"> <a th:if="${currentPage != i}"
-								th:href="@{'/produtos/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+						<span th:each="i: ${#numbers.sequence(1, totalPages)}"> <a
+							th:if="${currentPage != i}"
+							th:href="@{'/produtos/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
 							<span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp;
 							&nbsp;
 						</span>
@@ -120,9 +134,7 @@
 					<div class="col-sm-1">
 						<a th:if="${currentPage < totalPages}"
 							th:href="@{'/produtos/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Último</a>
-						<span th:unless="${currentPage < totalPages}">Último</span>
-
-						<br></br>
+						<span th:unless="${currentPage < totalPages}">Último</span> <br></br>
 					</div>
 				</div>
 
