--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -50,7 +50,12 @@
         <label for="propriedade">Produto/Propriedade</label>
         <select id="propriedade" class="form-control" th:field="*{propriedade}" onchange="limparCampos(); buscarCotacaoAnterior()">
             <option value="">Selecione...</option>
-            <option th:each="p : ${cotados}" th:value="${p.id}" th:text="${p.produto.nome} + ' - ' + ${p.codigo} + ' - ' + ${p.variedade}  + '  ' + ${p.subvariedade} + '  ' + ${p.classificacao}  + '  ' + ${p.unidade} + '  ' + ${p.peso} + '   ' + ${p.embalagem}">
+            <option th:each="p : ${cotados}"  th:data-peso="${p.peso}" th:value="${p.id}" 
+            th:text="${p.produto.nome} + ' - ' + 
+            ${p.codigo} + ' - ' + ${p.variedade}  + '  ' + 
+            ${p.subvariedade} + '  ' + ${p.classificacao}  + '  ' + 
+            ${p.unidade} + '  ' + ${p.peso} + '   ' + 
+            ${p.embalagem}" >
             </option>
         </select>
         <div class="input-group-append">
